# hera_notebook_templates

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  simple_ps.py  single_baseline_lst_stack_and_reinpaint.ipynb
.github/workflows/: tests.yml
hera_notebook_templates/: __init__.py  _version.py  cli.py  utils.py  utils_commissioning.py  utils_h1c.py  utils_load.py  version.py
notebooks/: Season_Summary.ipynb  antenna_classification_summary.ipynb  antenna_report.ipynb  auto_metrics_inspect.ipynb  calibration_smoothing.ipynb  data_inspect.ipynb  data_inspect_h1c.ipynb  delay_filtered_average_zscore.ipynb  delay_spectrum_inspect.ipynb  fastcal_inspect.ipynb  file_calibration-ant_swaps.ipynb  file_calibration.ipynb  file_inspect.ipynb  file_postprocessing.ipynb  filter_inspect.ipynb  full_day_antenna_flagging.ipynb  full_day_auto_checker.ipynb  full_day_rfi.ipynb  full_day_rfi_round_2.ipynb  full_day_rfi_round_3.ipynb  full_day_rfi_round_4.ipynb  full_day_rfi_round_5.ipynb  full_day_systematics_inspect.ipynb  full_lststack_rfi_round_6.ipynb  h1c_idr3_lst_bin_inspect.ipynb  h1c_systematics_mitigation_inspect.ipynb  inspect_gain_jump_calibration.ipynb  lstbin-inspect.ipynb  per_night_source_filtering_notebook.ipynb  post_corner_turn_systematics_inspect.ipynb  power_spectrum_inspect.ipynb  power_spectrum_summary.ipynb  redcal_inspect.ipynb  rfi_inspect.ipynb  rtp_summary.ipynb  scout_season_summary.ipynb  single_baseline_2D_filtered_SNRs.ipynb  single_baseline_2D_informed_inpaint.ipynb  single_baseline_lst_stack_and_reinpaint.ipynb  single_baseline_lstcal.ipynb  (+12 more)
(+21 files in other folders)
